# voc

./: Cargo.toml  README.md
.clinerules/: a-chaque-fois.md
crates/app/: Cargo.toml
crates/app/src/: main.rs  test_network.rs  voc_client.rs
crates/audio/: Cargo.toml
crates/audio/src/: capture.rs  codec.rs  config.rs  error.rs  lib.rs  pipeline.rs  playback.rs  traits.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: error.rs  lib.rs  manager.rs  traits.rs  transport.rs  types.rs
docs/: GUIDE_TEST_WINDOWS.md
