[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/audio", 
    "crates/network",
    "crates/app"
]

[workspace.dependencies]
# Dépendances communes partagées entre les crates
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
