[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dépendances vers les autres crates du workspace
core = { path = "../core" }
audio = { path = "../audio" }
network = { path = "../network" }

# Dépendances externes
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
rand = "0.8"
num_cpus = "1.16"
